重写dropper.c样例程序
引用cilium项目提供的头文件bpf/api.h

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,6 @@
 objfiles += xdp-example.o xdp-example.S
 objfiles += tc-example.o tc-example.S
+objfiles += dropper.o dropper.S
 host_cpu := $(shell uname --machine)
 CC := clang
 CFLAGS := -O2 -target bpf
